--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "prebuild": "npm cache clean --force",
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build",
+    "build":"ng build --prod",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
