--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "prebuild": "npm cache clean --force",
     "ng": "ng",
     "start": "ng serve",
-    "build":"ng build",
+    "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
@@ -21,6 +21,8 @@
     "@angular/router": "^17.3.7",
     "@ng-bootstrap/ng-bootstrap": "^16.0.0",
     "bootstrap": "^5.3.3",
+    "chart.js": "^4.4.3",
+    "ng2-charts": "^6.0.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
